force-app/main/default/objects/QuotesStructure__c/QuotesStructure__c.object-meta.xml
<CustomObject>
    <label>Quotes Structure</label>
    <nameField>
        <displayFormat>QS-{000000}</displayFormat>
        <label>QSName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>