force-app/main/default/objects/QuotesStructure__c/fields/Add_Qty_pcs__c.field-meta.xml
<CustomField>
    <fullName>Add_Qty_pcs__c</fullName>
    <label>Add. Qty (pcs)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>