force-app/main/default/objects/QuotesStructure__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Quotes Structures</relationshipLabel>
    <relationshipName>Quotes_Structures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>