force-app/main/default/objects/QuotesStructure__c/fields/FamilyNum__c.field-meta.xml
<CustomField>
    <fullName>FamilyNum__c</fullName>
    <formula>TEXT(Family__r.ID_ERP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family #</label>
    <type>Text</type>
</CustomField>