force-app/main/default/objects/QuotesStructure__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Нове поле, Lookup на новий довідник з мовними варіантами. В робочій версії буде він</description>
    <inlineHelpText>Нове поле, Lookup на новий довідник з мовними варіантами. В робочій версії буде він</inlineHelpText>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Quotes Structures</relationshipLabel>
    <relationshipName>Quotes_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>