force-app/main/default/objects/QuotesStructure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>Family__c</columns>
    <columns>DateBegin__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Region__c</columns>
    <columns>Manager__c</columns>
    <columns>Percent__c</columns>
    <columns>AddQty_t__c</columns>
    <columns>Add_Qty_pcs__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>