force-app/main/default/objects/QuotesStructure__c/listViews/QuotesStructuresAMERICA.listView-meta.xml
<ListView>
    <fullName>QuotesStructuresAMERICA</fullName>
    <columns>ID_ERP__c</columns>
    <columns>Family__c</columns>
    <columns>DateBegin__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Manager__c</columns>
    <columns>AddQty_t__c</columns>
    <columns>Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MarketSegment__c</field>
        <operation>equals</operation>
        <value>00001</value>
    </filters>
    <label>Quotes Structures AMERICA</label>
</ListView>